--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "node server.js",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
